--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "devDependencies": {
         "@nestia/e2e": "^0.3.6",
         "@nestia/sdk": "^1.4.12",
+        "@trivago/prettier-plugin-sort-imports": "^4.1.1",
         "@prisma/client": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.17",
@@ -70,10 +71,8 @@
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "eslint": "^8.45.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^5.0.0",
         "nestia": "^4.3.2",
-        "prettier": "^3.0.0",
+        "prettier": "^2.8.8",
         "prisma": "^5.0.0",
         "rimraf": "^5.0.1",
         "source-map-support": "^0.5.21",
